UPDATE NAS POM VERSION '2.1.0.BUILD-SNAPSHOT'